<resources>
    <string name="app_name">IrrigationPipes</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_pipe_navigation">PipeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.irrigation@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_report">Reports</string>
    <string name="menu_status">Status</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_user">User</string>

    <string name="farm_name">Farm Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="notification">Notifications</string>
    <string name="user_profile">User Profile</string>
    <string name="alarm">Alarm</string>
    <string name="sensor_status">Sensor Status</string>
    <string name="water_flow">Water Flow</string>
    <string name="report">Reports</string>
    <string name="user_name_profile">Username</string>
    <string name="senor_status">Sensor Status</string>
    <string name="description">User details</string>

    <string name="todo">TODO</string>
</resources>
