<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_status" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_user" />

    </group>

</menu>
